--- a/src/css/save-time/responsive.css
+++ b/src/css/save-time/responsive.css
@@ -332,9 +332,9 @@
     margin-right: 0;
     margin-bottom: 30px;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-bottom: 20px;
-  }
+  } */
   .c-hero__cover {
     width: 100vw;
     height: 80vw;
@@ -611,9 +611,9 @@
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-right: 0;
-  }
+  } */
   .c-hero__cover {
     height: 100vw;
     min-height: 500px;
