--- a/src/components/global/global.css
+++ b/src/components/global/global.css
@@ -14,3 +14,11 @@ body.loaded {
   opacity: 1;
 }
 
+.c-ctn {
+  width: 85%;
+  max-width: 1280px;
+  min-width: 970px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
