--- a/src/components/organisms/footer/footer.css
+++ b/src/components/organisms/footer/footer.css
@@ -1,3 +1,4 @@
+/*! CSS Used from: http://127.0.0.1:5501/src/css/Attract/main-attract.css */
 footer {
   display: block;
 }
@@ -9,19 +10,14 @@ a:active,
 a:hover {
   outline: 0;
 }
-
-/* .w-button {
-  display: inline-block;
-  padding: 9px 15px;
-  background-color: #3898ec;
-  color: #fff;
+img {
   border: 0;
-  line-height: inherit;
-  text-decoration: none;
-  cursor: pointer;
-  border-radius: 0;
-} */
-.w-layout-grid {
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+
+/* .w-layout-grid {
   display: -ms-grid;
   display: grid;
   grid-auto-columns: 1fr;
@@ -31,37 +27,8 @@ a:hover {
   grid-template-rows: auto auto;
   grid-row-gap: 16px;
   grid-column-gap: 16px;
-}
-h5 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #0f172a;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-img {
-  border: 0;
-  vertical-align: middle;
-  display: inline-block;
-  max-width: 180%;
-}
-.is--white {
-  color: white;
-  text-decoration: none;
-  margin-bottom: 12px;
-}
-.c-ctn {
-  max-width: none;
-}
-.c-ctn {
-  width: 85%;
-  max-width: 1280px;
-  min-width: 970px;
-  margin-right: auto;
-  margin-left: auto;
-}
+} */
+
 .flex-wrapper.cc-spaced {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
@@ -87,17 +54,96 @@ img {
 .c-btn.cc-no-border.white.mg-right__20 {
   margin-right: 20px;
 }
-.is--white.opacity-60 {
-  margin-bottom: 16px;
-  color: hsla(0, 0%, 100%, 0.6);
-  font-size: 16px;
-  text-decoration: none;
-}
 .is--white.is--12px {
   font-size: 12px;
 }
-.flex-wrapper {
+.c-footer {
+  position: relative;
+  padding-top: 80px;
+  background-color: #009aff;
+}
+.c-footer__lower {
+  padding-top: 60px;
+}
+.footer-grid {
+  -ms-grid-columns: 1fr 1.75fr;
+  grid-template-columns: 1fr 1.75fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+.c-footer__logo-part {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.c-footer__logo-part.cc-mobile {
+  display: none;
+}
+.c-footer__logo-part.upper {
+  position: relative;
+  min-height: 20rem;
+}
+.c-footer__links {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+.c-footer__links.cc-lower {
+  grid-column-gap: 5px;
+  -ms-grid-columns: 1fr 0.75fr 1fr;
+  grid-template-columns: 1fr 0.75fr 1fr;
+}
+.c-footer__logo {
+  margin-top: -15px;
+  margin-bottom: 45px;
+  margin-left: -25%;
+}
+.c-footer__links-block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  grid-auto-columns: 1fr;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
+}
+.footer-grid__lower {
+  margin-bottom: 20px;
+  padding-bottom: 40px;
+  -ms-grid-columns: 1fr 1.75fr;
+  grid-template-columns: 1fr 1.75fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+  border-bottom: 1px solid hsla(0, 0%, 100%, 0.4);
+}
+.c-footer__social-link {
+  margin-right: 24px;
+}
+.footer-grid__bottom {
+  padding-top: 20px;
+  -ms-grid-columns: 1fr 1.75fr;
+  grid-template-columns: 1fr 1.75fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
 }
 .c-footer__header {
   margin-bottom: 16px;
@@ -134,4 +180,699 @@ img {
 }
 .bcrop_logo-wrapper.is-footer {
   left: 0;
+}
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+  .c-footer__links {
+    grid-column-gap: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+  .flex-wrapper.cc-spaced.cc-100 {
+    width: 100%;
+  }
+  .flex-wrapper.cc-socials {
+    width: 65%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .c-btn.cc-light.white-border,
+  .c-btn.cc-no-border.white.mg-right__20 {
+    display: none;
+  }
+  .c-btn.cc-no-border.white.mg-right__20.faded-btn {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 10px;
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+  .c-footer {
+    background-color: #009aff;
+    background-image: none;
+  }
+  .c-footer__lower {
+    padding-top: 0;
+  }
+  .footer-grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+  .c-footer__logo-part {
+    width: 100%;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .c-footer__logo-part.cc-socials {
+    display: none;
+  }
+  .c-footer__logo-part.cc-mobile {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .c-footer__logo-part.upper {
+    margin-bottom: 80px;
+  }
+  .c-footer__links {
+    grid-row-gap: 45px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto auto;
+    grid-template-rows: auto auto auto;
+  }
+  .c-footer__links.cc-lower {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto auto;
+    grid-template-rows: auto auto auto;
+  }
+  .c-footer__links.cc-lower.cc-2 {
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+  }
+  .c-footer__links-block {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .c-footer__links-block.cc-build-for {
+    display: none;
+  }
+  .footer-grid__lower {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .footer-grid__bottom {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+  .bcrop_logo-wrapper {
+    left: auto;
+    top: auto;
+    right: 2%;
+    bottom: 0;
+    width: 3.75rem;
+    height: 5.5rem;
+  }
+  .bcrop_logo-wrapper.is-footer {
+    position: relative;
+    top: 2rem;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
+  .flex-wrapper.cc-spaced {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .flex-wrapper.cc-spaced.cc-100 {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+  .c-footer__logo-part.upper {
+    margin-bottom: 60px;
+  }
+  .c-footer__links {
+    grid-row-gap: 30px;
+  }
+  .c-footer__logo {
+    margin-left: -30%;
+  }
+  .c-footer__links-block.cc-btm {
+    text-align: center;
+  }
+  .c-footer-lower-portion {
+    padding-top: 32px;
+  }
+  .bcrop_logo-wrapper {
+    left: auto;
+    top: auto;
+    bottom: 0;
+  }
+}
+a:hover,
+a:focus {
+  outline: 0;
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/css/Homepage/responsive.css */
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+  .c-footer__links {
+    grid-column-gap: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+  .flex-wrapper.cc-spaced.cc-100 {
+    width: 100%;
+  }
+  .flex-wrapper.cc-socials {
+    width: 65%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .c-btn.cc-light.white-border,
+  .c-btn.cc-no-border.white.mg-right__20 {
+    display: none;
+  }
+  .c-btn.cc-no-border.white.mg-right__20.faded-btn {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 10px;
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+  .c-footer {
+    background-color: #009aff;
+    background-image: none;
+  }
+  .c-footer__lower {
+    padding-top: 0;
+  }
+  .footer-grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+  .c-footer__logo-part {
+    width: 100%;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .c-footer__logo-part.cc-socials {
+    display: none;
+  }
+  .c-footer__logo-part.cc-mobile {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .c-footer__logo-part.upper {
+    margin-bottom: 80px;
+  }
+  .c-footer__links {
+    grid-row-gap: 45px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto auto;
+    grid-template-rows: auto auto auto;
+  }
+  .c-footer__links.cc-lower {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto auto;
+    grid-template-rows: auto auto auto;
+  }
+  .c-footer__links.cc-lower.cc-2 {
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+  }
+  .c-footer__links-block {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .c-footer__links-block.cc-build-for {
+    display: none;
+  }
+  .footer-grid__lower {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .footer-grid__bottom {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+  .bcrop_logo-wrapper {
+    left: auto;
+    top: auto;
+    right: 2%;
+    bottom: 0;
+    width: 3.75rem;
+    height: 5.5rem;
+  }
+  .bcrop_logo-wrapper.is-footer {
+    position: relative;
+    top: 2rem;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
+  .flex-wrapper.cc-spaced {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .flex-wrapper.cc-spaced.cc-100 {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+  .c-footer__logo-part.upper {
+    margin-bottom: 60px;
+  }
+  .c-footer__links {
+    grid-row-gap: 30px;
+  }
+  .c-footer__logo {
+    margin-left: -30%;
+  }
+  .c-footer__logo.w--current {
+    margin-left: -28%;
+  }
+  .c-footer__links-block.cc-btm {
+    text-align: center;
+  }
+  .c-footer-lower-portion {
+    padding-top: 32px;
+  }
+  .bcrop_logo-wrapper {
+    left: auto;
+    top: auto;
+    bottom: 0;
+  }
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/components/atoms/Text/text.css */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.is--white {
+  margin-bottom: 12px;
+  color: #fff;
+  text-decoration: none;
+}
+.is--white.opacity-60 {
+  margin-bottom: 16px;
+  color: hsla(0, 0%, 100%, 0.6);
+  font-size: 16px;
+  text-decoration: none;
+}
+.is--white.opacity-60 {
+  margin-bottom: 16px;
+  color: hsla(0, 0%, 100%, 0.6);
+  font-size: 16px;
+  text-decoration: none;
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/components/atoms/button/button.css */
+
+.flex-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mg-right__20 {
+  margin-right: 20px;
+}
+.c-btn.cc-light {
+  border: 2px solid #000;
+  background-color: transparent;
+  color: #0f172a;
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/components/atoms/pricing-line/line.css */
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
+}
+a:hover,
+a:focus {
+  outline: 0;
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/components/organisms/customer-think/customer-think.css */
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+.c-ctn {
+  max-width: none;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/components/molecules/tips/tips.css */
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+.c-ctn {
+  max-width: none;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
+}
+* {
+  -moz-font-feature-settings: "ss01";
+  -webkit-font-feature-settings: "ss01";
+  font-feature-settings: "ss01" on;
+}
+a:hover,
+a:focus {
+  outline: 0;
+}
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
+}
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
+}
+a:hover,
+a:focus {
+  outline: 0;
+}
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+a:hover,
+a:focus {
+  outline: 0;
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/components/molecules/welcome/welcome.css */
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+a {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+* {
+  -moz-font-feature-settings: "ss01";
+  -webkit-font-feature-settings: "ss01";
+  font-feature-settings: "ss01" on;
+}
+a:hover,
+a:focus {
+  outline: 0;
+}
+/*! CSS Used from: http://127.0.0.1:5501/src/components/molecules/careerSite/careerSite.css */
+img {
+  border: 0;
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 180%;
+}
+
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn {
+    max-width: 479px;
+    min-width: 300px;
+  }
 }
