--- a/src/css/Assess/assess-main.css
+++ b/src/css/Assess/assess-main.css
@@ -26,10 +26,7 @@ img {
 /* * {
   box-sizing: border-box;
 } */
-.w-inline-block {
-  max-width: 100%;
-  display: inline-block;
-}
+
 .w-button {
   display: inline-block;
   padding: 9px 15px;
@@ -245,9 +242,7 @@ img {
   padding-top: 0;
   padding-bottom: 0;
 }
-.c-section.no-padding.cc-light-green-bg {
-  background-color: rgba(53, 200, 159, 0.17);
-}
+
 .c-section.cc-beige-bg {
   background-color: #fdf5f7;
 }
@@ -263,13 +258,7 @@ img {
   overflow: hidden;
   padding-top: 120px;
 }
-.c-ctn {
-  width: 85%;
-  max-width: 1280px;
-  min-width: 970px;
-  margin-right: auto;
-  margin-left: auto;
-}
+
 .c-ctn.cc-absolute {
   position: absolute;
   padding-bottom: 0;
@@ -416,31 +405,7 @@ img {
 .center-text.cc--author {
   margin-bottom: 4px;
 }
-.c-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 48px;
-  min-width: 120px;
-  padding: 15px 23px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 50px;
-  background-color: #0f172a;
-  color: #fff;
-  font-size: 14px;
-  line-height: 14.4px;
-  letter-spacing: -0.02em;
-  text-decoration: none;
-  cursor: pointer;
-}
+
 .c-btn.cc-light {
   border: 2px solid #000;
   background-color: transparent;
@@ -511,9 +476,9 @@ img {
   background-color: transparent;
   color: #0f172a;
 }
-.c-btn.cc-with-icon.mg-right__20 {
+/* .c-btn.cc-with-icon.mg-right__20 {
   background-color: #fff;
-}
+} */
 .c-btn.cc-with-icon.cc-white {
   background-color: #fff;
 }
