--- a/src/css/Assess/start.css
+++ b/src/css/Assess/start.css
@@ -23,41 +23,8 @@ svg:not(:root) {
 html.w-mod-touch * {
   background-attachment: scroll !important;
 }
-.w-inline-block {
-  max-width: 100%;
-  display: inline-block;
-}
-h1 {
-  margin: 20px 0 40px;
-  color: #0f172a;
-  font-size: 50.52px;
-  line-height: 64px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #0f172a;
-  font-size: 28.43px;
-  line-height: 40px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-p {
-  margin-top: 0;
-  margin-bottom: 40px;
-  color: rgba(15, 23, 42, 0.65);
-  font-size: 16px;
-  line-height: 24px;
-}
-.c-ctn {
-  width: 85%;
-  max-width: 1280px;
-  min-width: 970px;
-  margin-right: auto;
-  margin-left: auto;
-}
+
+
 .c-ctn.cc-absolute {
   position: absolute;
   padding-bottom: 0;
@@ -94,38 +61,14 @@ p {
   display: -ms-flexbox;
   display: flex;
 }
-.c-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 48px;
-  min-width: 120px;
-  padding: 15px 23px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 50px;
-  background-color: #0f172a;
-  color: #fff;
-  font-size: 14px;
-  line-height: 14.4px;
-  letter-spacing: -0.02em;
-  text-decoration: none;
-  cursor: pointer;
-}
+
 .c-btn.cc-with-icon {
   padding-right: 20px;
   padding-left: 20px;
 }
-.c-btn.cc-with-icon.mg-right__20 {
+/* .c-btn.cc-with-icon.mg-right__20 {
   background-color: #fff;
-}
+} */
 .c-icon__arrow {
   margin-left: 5px;
   color: #0f172a;
@@ -229,9 +172,9 @@ p {
   .c-ctn.cc-absolute {
     position: static;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-bottom: 20px;
-  }
+  } */
   .c-hero__cover {
     width: 100vw;
     height: 80vw;
@@ -254,9 +197,9 @@ p {
     max-width: 479px;
     min-width: 300px;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-right: 0;
-  }
+  } */
   .c-hero__cover {
     height: 100vw;
     min-height: 500px;
