--- a/src/css/Attract/main-attract.css
+++ b/src/css/Attract/main-attract.css
@@ -42,10 +42,7 @@ svg:not(:root) {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 } */
-.w-inline-block {
-  max-width: 100%;
-  display: inline-block;
-}
+
 /* .w-button {
   display: inline-block;
   padding: 9px 15px;
@@ -244,7 +241,7 @@ svg:not(:root) {
   font-weight: 400;
   letter-spacing: -0.02em;
 } */
-h5 {
+/* h5 {
   margin-top: 0;
   margin-bottom: 10px;
   color: #0f172a;
@@ -252,7 +249,7 @@ h5 {
   line-height: 24px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
+} */
 /* p {
   margin-top: 0;
   margin-bottom: 40px;
@@ -270,9 +267,7 @@ h5 {
   padding-top: 0;
   padding-bottom: 0;
 }
-.c-section.no-padding.cc-light-red-bg {
-  background-color: rgba(255, 40, 104, 0.17);
-}
+
 .c-section.cc-beige-bg {
   background-color: #fdf5f7;
 }
@@ -288,13 +283,7 @@ h5 {
   overflow: hidden;
   padding-top: 120px;
 }
-.c-ctn {
-  width: 85%;
-  max-width: 1280px;
-  min-width: 970px;
-  margin-right: auto;
-  margin-left: auto;
-}
+
 .c-ctn.cc-absolute {
   position: absolute;
   padding-bottom: 0;
@@ -855,17 +844,7 @@ h5 {
   margin-right: auto;
   margin-left: 0;
 }
-.c-flex__cover.cc-red {
-  background-color: #ff2868;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    color-stop(55%, #ff2868),
-    color-stop(0, #f8b8c3)
-  );
-  background-image: linear-gradient(90deg, #ff2868 55%, #f8b8c3 0);
-}
+
 .c-flex__cover.cc-red.no-gd {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1567,9 +1546,7 @@ h5 {
   border-radius: 17px;
   background-color: rgba(0, 154, 255, 0.09);
 }
-.c-info__holder.cc-ruby {
-  background-color: rgba(255, 40, 104, 0.09);
-}
+
 .c-info__holder.cc-green {
   background-color: rgba(53, 200, 159, 0.09);
 }
@@ -2425,9 +2402,9 @@ h5 {
     margin-right: 0;
     margin-bottom: 30px;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-bottom: 20px;
-  }
+  } */
   .c-hero__cover {
     width: 100vw;
     height: 80vw;
@@ -2722,9 +2699,9 @@ h5 {
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-right: 0;
-  }
+  } */
   .is--white.no-padding {
     margin-top: 0;
   }
