--- a/src/css/Homepage/full.css
+++ b/src/css/Homepage/full.css
@@ -45,10 +45,7 @@ svg:not(:root) {
 html.w-mod-touch * {
   background-attachment: scroll !important;
 }
-.w-inline-block {
-  max-width: 100%;
-  display: inline-block;
-}
+
 .w-button {
   display: inline-block;
   padding: 9px 15px;
@@ -213,57 +210,7 @@ html.w-mod-touch * {
   font-size: 14px;
   line-height: 20px;
 } */
-h1 {
-  margin: 20px 0 40px;
-  color: #0f172a;
-  font-size: 50.52px;
-  line-height: 64px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h2 {
-  margin-top: 10px;
-  margin-bottom: 24px;
-  color: #0f172a;
-  font-size: 37.9px;
-  line-height: 48px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #0f172a;
-  font-size: 28.43px;
-  line-height: 40px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h4 {
-  margin-top: 10px;
-  margin-bottom: 24px;
-  color: #0f172a;
-  font-size: 21.33px;
-  line-height: 32px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h5 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #0f172a;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-p {
-  margin-top: 0;
-  margin-bottom: 40px;
-  color: rgba(15, 23, 42, 0.65);
-  font-size: 16px;
-  line-height: 24px;
-}
+
 /* .c-section {
   position: relative;
   padding-top: 80px;
@@ -300,13 +247,7 @@ p {
   background-color: #009aff;
   color: #fff;
 }
-.c-ctn {
-  width: 85%;
-  max-width: 1280px;
-  min-width: 970px;
-  margin-right: auto;
-  margin-left: auto;
-}
+
 .c-ctn.cc-absolute {
   position: absolute;
   padding-bottom: 0;
@@ -484,31 +425,7 @@ p {
 .center-text.p-btm__12 {
   padding-bottom: 12px;
 }
-.c-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 48px;
-  min-width: 120px;
-  padding: 15px 23px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 50px;
-  background-color: #0f172a;
-  color: #fff;
-  font-size: 14px;
-  line-height: 14.4px;
-  letter-spacing: -0.02em;
-  text-decoration: none;
-  cursor: pointer;
-}
+
 .c-btn.cc-light {
   border: 2px solid #000;
   background-color: transparent;
@@ -587,10 +504,10 @@ p {
   background-color: transparent;
   color: #0f172a;
 }
-.c-btn.cc-with-icon.mg-right__20 {
+/* .c-btn.cc-with-icon.mg-right__20 {
   background-color: #0f172a;
   color: #fff;
-}
+} */
 .c-btn.cc-with-icon.cc-large {
   width: auto;
   -webkit-transition: 0.3s;
@@ -1044,17 +961,7 @@ p {
   margin-right: auto;
   margin-left: 0;
 }
-.c-flex__cover.cc-red {
-  background-color: #ff2868;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    color-stop(55%, #ff2868),
-    color-stop(0, #f8b8c3)
-  );
-  background-image: linear-gradient(90deg, #ff2868 55%, #f8b8c3 0);
-}
+
 .c-flex__cover.cc-red.cc-left {
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -3143,9 +3050,9 @@ p {
     margin-right: 0;
     margin-bottom: 30px;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-bottom: 20px;
-  }
+  } */
   .c-btn.cc-with-icon.big-orange {
     width: 80%;
     max-width: 350px;
@@ -3574,9 +3481,9 @@ p {
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-right: 0;
-  }
+  } */
   .c-btn.cc-with-icon.big-orange {
     width: 100%;
   }
