--- a/src/css/Homepage/responsive.css
+++ b/src/css/Homepage/responsive.css
@@ -1,4 +1,8 @@
-/*! CSS Used from: https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/css/stryve-project-5bdce3c7936e32726719e868.webflow.44e24a980.min.css */
+
+.brand.w--current {
+  display: flex;
+}
+
 @media screen and (max-width: 767px) {
   .w-nav-brand {
     padding-left: 10px;
@@ -171,10 +175,10 @@
     max-width: 920px;
     min-width: 350px;
   }
-  .c-ctn.cc-nav {
+  /* .c-ctn.cc-nav {
     max-width: 992px;
     min-width: 740px;
-  }
+  } */
   .c-ctn.cc-80 {
     max-width: 992px;
     min-width: 700px;
@@ -476,11 +480,11 @@
     max-width: 767px;
     min-width: 440px;
   }
-  .c-ctn.cc-nav {
+  /* .c-ctn.cc-nav {
     width: 96%;
     max-width: none;
     min-width: 440px;
-  }
+  } */
   .c-ctn.cc-80 {
     max-width: 615px;
     min-width: 440px;
@@ -944,10 +948,10 @@
     max-width: 479px;
     min-width: 300px;
   }
-  .c-ctn.cc-nav {
+  /* .c-ctn.cc-nav {
     max-width: 479px;
     min-width: 300px;
-  }
+  } */
   .c-ctn.cc-80 {
     max-width: 385px;
     min-width: 300px;
