--- a/src/css/career/responsive.css
+++ b/src/css/career/responsive.css
@@ -330,9 +330,9 @@
   .c-btn.cc-with-icon.cc-no-border.desktop {
     display: none;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-bottom: 20px;
-  }
+  } */
   .c-hero__cover {
     width: 100vw;
     height: 80vw;
@@ -633,9 +633,9 @@
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-right: 0;
-  }
+  } */
   .c-hero__cover {
     height: 100vw;
     min-height: 500px;
