--- a/src/css/contact/responsive.css
+++ b/src/css/contact/responsive.css
@@ -249,9 +249,9 @@
   .flex-vertical.cc-nav-menu {
     overflow: auto;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-bottom: 20px;
-  }
+  } */
   .c-hero__cover {
     width: 100vw;
     height: 80vw;
@@ -374,9 +374,9 @@
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  .c-btn.cc-with-icon.mg-right__20 {
+  /* .c-btn.cc-with-icon.mg-right__20 {
     margin-right: 0;
-  }
+  } */
   .c-hero__cover {
     height: 100vw;
     min-height: 500px;
