--- a/src/css/simplify/full.css
+++ b/src/css/simplify/full.css
@@ -42,10 +42,7 @@ svg:not(:root) {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.w-inline-block {
-  max-width: 100%;
-  display: inline-block;
-}
+
 .w-button {
   display: inline-block;
   padding: 9px 15px;
@@ -209,57 +206,7 @@ svg:not(:root) {
   font-size: 14px;
   line-height: 20px;
 } */
-h1 {
-  margin: 20px 0 40px;
-  color: #0f172a;
-  font-size: 50.52px;
-  line-height: 64px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h2 {
-  margin-top: 10px;
-  margin-bottom: 24px;
-  color: #0f172a;
-  font-size: 37.9px;
-  line-height: 48px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #0f172a;
-  font-size: 28.43px;
-  line-height: 40px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h4 {
-  margin-top: 10px;
-  margin-bottom: 24px;
-  color: #0f172a;
-  font-size: 21.33px;
-  line-height: 32px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-h5 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #0f172a;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-}
-p {
-  margin-top: 0;
-  margin-bottom: 40px;
-  color: rgba(15, 23, 42, 0.65);
-  font-size: 16px;
-  line-height: 24px;
-}
+
 /* .c-section {
   position: relative;
   padding-top: 80px;
@@ -288,13 +235,7 @@ p {
   overflow: hidden;
   padding-top: 120px;
 }
-.c-ctn {
-  width: 85%;
-  max-width: 1280px;
-  min-width: 970px;
-  margin-right: auto;
-  margin-left: auto;
-}
+
 .c-ctn.cc-absolute {
   position: absolute;
   padding-bottom: 0;
@@ -441,31 +382,7 @@ p {
 .center-text.cc--author {
   margin-bottom: 4px;
 }
-.c-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 48px;
-  min-width: 120px;
-  padding: 15px 23px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 50px;
-  background-color: #0f172a;
-  color: #fff;
-  font-size: 14px;
-  line-height: 14.4px;
-  letter-spacing: -0.02em;
-  text-decoration: none;
-  cursor: pointer;
-}
+
 .c-btn.cc-light {
   border: 2px solid #000;
   background-color: transparent;
@@ -536,9 +453,9 @@ p {
   background-color: transparent;
   color: #0f172a;
 }
-.c-btn.cc-with-icon.mg-right__20 {
+/* .c-btn.cc-with-icon.mg-right__20 {
   background-color: #fff;
-}
+} */
 .c-btn.cc-with-icon.cc-white {
   background-color: #fff;
 }
